--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aurelia's Matching Memory Cards Game</title>
+    <title>Aurelia's Matching Memory Card Game</title>
 </head>
 <body>
     <header id="main-header">
