added game instructions

--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
         </nav>
     </header>
     
+    <div class="instructions">
+        <p>Select any card to view it. Match all the pairs of identical cards to complete the level.</p>
+        <p>Choose a different level from the menu.</p>
+        <p>Enjoy!</p>
+    </div>
 </body>
 </html>
