--- a/index.html
+++ b/index.html
@@ -24,4 +24,5 @@
         <p>Enjoy!</p>
     </div>
 </body>
+<footer><small>&copy; 2023 Aurelia Ang - All rights reserved</small></footer>
 </html>
