created and linked stylesheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Aurelia's Matching Memory Card Game</title>
 </head>
 <body>
@@ -19,10 +20,36 @@
     </header>
     
     <div class="instructions">
+        <h1>How to play</h1>
         <p>Select any card to view it. Match all the pairs of identical cards to complete the level.</p>
         <p>Choose a different level from the menu.</p>
         <p>Enjoy!</p>
     </div>
+
+    <div class="card">
+        <div class="card-inner">
+            <div class="card-front">
+
+            </div>
+            <div class="card-back">
+                <div class="image">
+                    <img src="images/chill-walrus.jpg">
+                </div>
+            </div> 
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-inner">
+            <div class="card-front"></div>
+            <div class="card-back">
+                <div class="image">
+                    <img src="images/stern-walrus.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 <footer><small>&copy; 2023 Aurelia Ang - All rights reserved</small></footer>
 </html>
