styled card-back

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/chill-walrus.jpg">
+                    <img src="images/chill-walrus.jpg" class="card-img">
                 </div>
             </div> 
         </div>
@@ -44,7 +44,7 @@
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/stern-walrus.jpg">
+                    <img src="images/stern-walrus.jpg" class="card-img">
                 </div>
             </div>
         </div>
