added alt text to images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/chill-walrus.jpg" class="card-img">
+                    <img src="images/chill-walrus.jpg" class="card-img" alt="A walrus looking relaxed">
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/stern-walrus.jpg" class="card-img">
+                    <img src="images/stern-walrus.jpg" class="card-img" alt="A stern-looking walrus staring right at the camera">
                 </div>
             </div>
         </div>
