added third card

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="scene">
-        <div class="card">
+        <div class="card one">
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
@@ -39,11 +39,21 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card two">
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/stern-walrus.jpg" class="card-img" alt="A stern-looking walrus staring right at the camera">
+                    <img src="images/stern-walrus.jpg" class="card-img"
+                        alt="A stern-looking walrus staring right at the camera">
+                </div>
+            </div>
+        </div>
+
+        <div class="card three">
+            <div class="card-front"></div>
+            <div class="card-back">
+                <div class="image">
+                    <img src="images/walrus-on-beach.jpg" class="card-img" alt="A walrus on a beach">
                 </div>
             </div>
         </div>
