--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 <body>
     <header id="main-header">
         <nav>
-            <ul>
-                <li>Level 1</li>
-                <li>Level 2</li>
-                <li>Level 3</li>
-                <li>About</li>
-            </ul>
+            <a href="#">Level 1</a>
+            <a href="leveltwo.html">Level 2</a>
+            <a href="levelthree.html">Level 3</a>
+            <a href="about.html">About</a>            
         </nav>
     </header>
 
