added Font Awesome CDN script

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="cards.js" defer></script>
+    <script src="menu.js" defer></script>
+    <script src="https://use.fontawesome.com/f6a7069589.js"></script>
     <title>Aurelia's Matching Memory Card Game</title>
 </head>
 
