implemented collapsible menu

--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 <body>
     <header id="main-header">
         <nav>
-            <a href="#">Level 1</a>
-            <a href="leveltwo.html">Level 2</a>
-            <a href="levelthree.html">Level 3</a>
-            <a href="about.html">About</a>            
+            <div id="nav-links">
+                <a href="#">Level 1</a>
+                <a href="leveltwo.html">Level 2</a>
+                <a href="levelthree.html">Level 3</a>
+                <a href="about.html">About</a>            
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
+                <i class="fa fa-bars"></i>
+            </a>
         </nav>
     </header>
 
