created horizontal nav for tablet viewport

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 <body>
     <header id="main-header">
         <nav>
+            <div class="home">Home</div>
             <div id="nav-links">
-                <a href="#">Level 1</a>
-                <a href="leveltwo.html">Level 2</a>
-                <a href="levelthree.html">Level 3</a>
-                <a href="about.html">About</a>            
+                <ul>
+                <li><a href="#">Level 1</a></li>
+                <li><a href="leveltwo.html">Level 2</a></li>
+                <li><a href="levelthree.html">Level 3</a></li>
+                <li><a href="about.html">About</a></li>
+                </ul>            
             </div>
             <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
-                <i class="fa fa-bars"></i>
+                <i class="fa fa-bars"></i>&nbsp; Menu
             </a>
         </nav>
     </header>
