renamed image filepaths

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/chill-walrus.jpg" class="card-img" alt="A walrus looking relaxed">
+                    <img src="assets/images/chill-walrus.jpg" class="card-img" alt="A walrus looking relaxed">
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/stern-walrus.jpg" class="card-img"
+                    <img src="assets/images/stern-walrus.jpg" class="card-img"
                         alt="A stern-looking walrus staring right at the camera">
                 </div>
             </div>
@@ -61,7 +61,7 @@
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
-                    <img src="images/walrus-on-beach.jpg" class="card-img" alt="A walrus on a beach">
+                    <img src="assets/images/walrus-on-beach.jpg" class="card-img" alt="A walrus on a beach">
                 </div>
             </div>
         </div>
