completed flipcard js

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <p>Enjoy!</p>
     </div>
 
+    <main>
     <div class="scene">
-        <div class="card one">
+        <div class="card">
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
@@ -47,7 +48,7 @@
             </div>
         </div>
 
-        <div class="card two">
+        <div class="card">
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
@@ -57,7 +58,7 @@
             </div>
         </div>
 
-        <div class="card three">
+        <div class="card">
             <div class="card-front"></div>
             <div class="card-back">
                 <div class="image">
@@ -66,6 +67,7 @@
             </div>
         </div>
     </div>
+    </main>
 
     <footer>&copy; 2023 Aurelia Ang. All rights reserved.</footer>
 
