--- a/levelthree.html
+++ b/levelthree.html
@@ -24,8 +24,8 @@
                     <li><a href="about.html">About</a></li>
                 </ul>
             </div>
-            <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
-                <i class="fa fa-bars"></i>&nbsp; Menu
+            <a href="javascript:void(0);" class="menu" onclick="toggleMenu()">
+                <i class="fa fa-bars fa-lg" aria-hidden="true"></i>&nbsp; Menu
             </a>
         </nav>
     </header>
