added nav anchor to home page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <body>
     <header id="main-header">
-        <nav>
-            <div class="home">Home</div>
+        <nav role="navigation">
+            <div class="home">
+                <a href="index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp;Home</a>
+            </div>
             <div id="nav-links">
                 <ul>
                     <li><a href="#">Level 1</a></li>
