--- a/levelthree.html
+++ b/levelthree.html
@@ -15,7 +15,9 @@
 <body>
     <header id="main-header">
         <nav role="navigation">
-            <div class="home">Home</div>
+            <div class="home">
+                <a href="index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp;Home</a>
+            </div>
             <div id="nav-links">
                 <ul>
                     <li><a href="index.html">Level 1</a></li>
