moved content from index to level one

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div id="nav-links">
                 <ul>
-                    <li><a href="#">Level 1</a></li>
+                    <li><a href="levelone.html">Level 1</a></li>
                     <li><a href="leveltwo.html">Level 2</a></li>
                     <li><a href="levelthree.html">Level 3</a></li>
                     <li><a href="about.html">About</a></li>
@@ -32,73 +32,18 @@
         </nav>
     </header>
 
+    <div class="game-name">
+        <h1>Matching Memory Card Game</h1>
+    </div>
+
     <div class="instructions">
-        <h1>How to play</h1>
-        <p>Select any card to view it. Match all the pairs of identical cards to complete the level.</p>
+        <h2>How to play</h2>
+        <p>Match all the pairs of identical cards to complete the level. Select any card to view it.</p>
         <p>Choose a different level from the menu.</p>
         <p>Enjoy!</p>
     </div>
 
     <main>
-        <div class="scene">
-
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/walrus-on-beach.jpg" class="card-img" alt="A walrus on a beach">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/chill-walrus.jpg" class="card-img" alt="A walrus looking relaxed">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/stern-walrus.jpg" class="card-img"
-                            alt="A stern-looking walrus staring right at the camera">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/stern-walrus.jpg" class="card-img"
-                            alt="A stern-looking walrus staring right at the camera">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/walrus-on-beach.jpg" class="card-img" alt="A walrus on a beach">
-                    </div>
-                </div>
-            </div>
-            
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/chill-walrus.jpg" class="card-img" alt="A walrus looking relaxed">
-                    </div>
-                </div>
-            </div>
-            
-        </div>
     </main>
 
     <footer>&copy; 2023 Aurelia Ang. All rights reserved.</footer>
