updated nav links for level one page

--- a/leveltwo.html
+++ b/leveltwo.html
@@ -20,7 +20,7 @@
             </div>
             <div id="nav-links">
                 <ul>
-                    <li><a href="index.html">Level 1</a></li>
+                    <li><a href="levelone.html">Level 1</a></li>
                     <li><a href="leveltwo.html">Level 2</a></li>
                     <li><a href="levelthree.html">Level 3</a></li>
                     <li><a href="about.html">About</a></li>
@@ -32,8 +32,8 @@
         </nav>
     </header>
 
-    <div class="game-name">
-        <h1>Matching Memory Card Game – Level Two</h1>
+    <div class="level">
+        <h1>Level Two</h1>
     </div>
 
     <div class="instructions">
