--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
         </nav>
     </header>
 
-    <div class="game-name">
-        <h1>Matching Memory Card Game</h1>
-    </div>
-
-    <div class="instructions">
-        <h2>How to play</h2>
-        <p>Match all the pairs of identical cards to complete the level. Select any card to view it.</p>
-        <p>Choose a different level from the menu.</p>
-        <p>Enjoy!</p>
-    </div>
-
     <main>
+        <div class="game-name">
+            <h1>Matching Memory Card Game</h1>
+        </div>
+
+        <div class="instructions">
+            <h2>How to play</h2>
+            <p>Match all the pairs of identical cards to complete the level. Select any card to view it.</p>
+            <p>Choose a different level from the menu.</p>
+            <p>Enjoy!</p>
+        </div>
+
+        <button type="button" class="btn-start" onclick="window.location.href='levelone.html'">Start game</button>
     </main>
 
     <footer>&copy; 2023 Aurelia Ang. All rights reserved.</footer>
