styled accordion css

--- a/levelone.html
+++ b/levelone.html
@@ -35,7 +35,8 @@
         <h1>Level One</h1>
     </div>
 
-    <div class="instructions">
+    <button class="accordion instructions">How to play</button>
+    <div class="panel instructions">
         <h2>How to play</h2>
         <p>Match all the pairs of identical cards to complete the level. Select any card to view it.</p>
         <p>Choose a different level from the menu.</p>
