added javascript for accordion and renamed js file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/f6a7069589.js"></script>
     <script src="menu.js" defer></script>
-    <script src="cards.js" defer></script>
+    <script src="main.js" defer></script>
     <title>Aurelia's Matching Memory Card Game</title>
 </head>
 
