changed instructions to accordion

--- a/levelthree.html
+++ b/levelthree.html
@@ -35,8 +35,8 @@
         <h1>Level Three</h1>
     </div>
 
-    <div class="instructions">
-        <h2>How to play</h2>
+    <button class="accordion instructions">How to play</button>
+    <div class="panel instructions">
         <p>Match all the pairs of identical cards to complete the level. Select any card to view it.</p>
         <p>Choose a different level from the menu.</p>
         <p>Enjoy!</p>
