added level four

--- a/levelfour.html
+++ b/levelfour.html
@@ -33,7 +33,7 @@
     </header>
 
     <div class="level-name">
-        <h1>Level Three</h1>
+        <h1>Level Four</h1>
     </div>
 
     <button class="accordion instructions">How to play</button>
@@ -50,7 +50,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-bananas.jpg" class="card-img" alt="A bunch of bananas">
+                        <img src="assets/images/lachlan-gowen-orca.jpg" class="card-img"
+                            alt="An orca with its head above the water">
                     </div>
                 </div>
             </div>
@@ -59,7 +60,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-grapes.jpg" class="card-img" alt="A bunch of grapes">
+                        <img src="assets/images/tengyart-beluga-whale.jpg" class="card-img"
+                            alt="Close up of a white beluga whale">
                     </div>
                 </div>
             </div>
@@ -68,7 +70,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-oranges.jpg" class="card-img" alt="Two oranges">
+                        <img src="assets/images/guille-pozzi-mother-and-calf-whale.jpg" class="card-img"
+                            alt="Aerial photo of a mother whale and her calf">
                     </div>
                 </div>
             </div>
@@ -77,7 +80,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-bananas.jpg" class="card-img" alt="A bunch of bananas">
+                        <img src="assets/images/lachlan-gowen-orca.jpg" class="card-img"
+                            alt="An orca with its head above the water">
                     </div>
                 </div>
             </div>
@@ -86,7 +90,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-pear.jpg" class="card-img" alt="A pear">
+                        <img src="assets/images/noaa-pod-of-melon-headed-whales.jpg" class="card-img"
+                            alt="A pod of melon-headed whales">
                     </div>
                 </div>
             </div>
@@ -95,7 +100,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-pear.jpg" class="card-img" alt="A pear">
+                        <img src="assets/images/guille-pozzi-mother-and-calf-whale.jpg" class="card-img"
+                            alt="Aerial photo of a mother whale and her calf">
                     </div>
                 </div>
             </div>
@@ -104,7 +110,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-pomegranate.jpg" class="card-img" alt="A pomegranate">
+                        <img src="assets/images/thomas-kelley-whale-breaching.jpg" class="card-img"
+                            alt="A humpback whale breaching the waters">
                     </div>
                 </div>
             </div>
@@ -113,7 +120,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-grapes.jpg" class="card-img" alt="A bunch of grapes">
+                        <img src="assets/images/thomas-kelley-whale-breaching.jpg" class="card-img"
+                            alt="A humpback whale breaching the waters">
                     </div>
                 </div>
             </div>
@@ -122,8 +130,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-pumpkin.jpg" class="card-img"
-                            alt="Some kind of melon or pumpkin">
+                        <img src="assets/images/tengyart-beluga-whale.jpg" class="card-img"
+                            alt="Close up of a white beluga whale">
                     </div>
                 </div>
             </div>
@@ -132,26 +140,8 @@
                 <div class="card-front"></div>
                 <div class="card-back">
                     <div class="image">
-                        <img src="assets/images/mockup-graphics-pumpkin.jpg" class="card-img"
-                            alt="Some kind of melon or pumpkin">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/mockup-graphics-oranges.jpg" class="card-img" alt="Two oranges">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <div class="image">
-                        <img src="assets/images/mockup-graphics-pomegranate.jpg" class="card-img" alt="A pomegranate">
+                        <img src="assets/images/noaa-pod-of-melon-headed-whales.jpg" class="card-img"
+                            alt="A pod of melon-headed whales">
                     </div>
                 </div>
             </div>
