--- a/levelone.html
+++ b/levelone.html
@@ -23,6 +23,7 @@
                     <li><a href="levelone.html">Level 1</a></li>
                     <li><a href="leveltwo.html">Level 2</a></li>
                     <li><a href="levelthree.html">Level 3</a></li>
+                    <li><a href="levelfour.html">Level 4</a></li>
                 </ul>
             </div>
             <a href="javascript:void(0);" class="menu" onclick="toggleMenu()">
